Fixed explore page having 2 scrollbars Improved query on owner NFTs Improved collection query

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,8 +18,11 @@ html {
 		color: rgba(0, 0, 0, 0.6);
 	}
 
-	body.modal-open {
+	body {
 		max-height: 100vh;
+	}
+
+	body.modal-open {
 		overflow: hidden;
 	}
 }
